# python-project-lvl4

./: README.md  pyproject.toml  requirements.txt
task_manager/: settings.py
